Improve Docker environment

--- a/kanachan/simulation/Dockerfile
+++ b/kanachan/simulation/Dockerfile
@@ -2,4 +2,4 @@ FROM cryolite/kanachan
 
 WORKDIR /workspace/data
 
-ENTRYPOINT ["python3", "-m", "kanachan.simulation.run"]
+ENTRYPOINT ["bash", "/workspace/kanachan/kanachan/simulation/run.sh"]
