--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@
 /src/common/mahjongsoul.pb.cc
 /build/
 /kanachan/simulation/_simulation.so
-/kanachan.egg-info/
+/.mypy_cache/
+*.pyc
 __pycache__
+/dist/
